--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap');
 
 :root {
-    --primary: #2d8cdf;
+    --primary: #80ff00;
     --normal: #ffffff;
     --black: #13131a;
     --bg: #0c1013;
